--- a/manifest-v3-firefox.json
+++ b/manifest-v3-firefox.json
@@ -29,7 +29,7 @@
         "https://www.youtube.com/api/timedtext?*"
     ],
     "background": {
-        "service_worker": "js/background.js"
+        "scripts": ["js/background.js"]
     },
     "content_security_policy": {
         "extension_pages": "script-src 'self'; object-src 'self'; require-trusted-types-for 'script'; trusted-types my-extension-policy;"
